--- a/calci/style.css
+++ b/calci/style.css
@@ -1,74 +1,125 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap");
 
 .container {
-    border-radius:0px 25px 0px;position:absolute;
-    top:80px;
-    left:500px;
-    width:25%;
-    -gap: 10px;
-    background-color: #2196F3;
-    padding: 10px;
-    display: grid
-    ;grid-template-columns:1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-    text-align: center;
-    font-family: 'Oswald', sans-serif;
-
+  border-radius: 0px 25px 0px;
+  position: absolute;
+  top: 80px;
+  left: 500px;
+  width: 25%;
+  -gap: 10px;
+  background-color: #2196f3;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  text-align: center;
+  font-family: "Oswald", sans-serif;
 }
-form{
-    grid-column: 1/5;grid-row:1/2;
+form {
+  grid-column: 1/5;
+  grid-row: 1/2;
 }
-input[type=text]{
-
-    height:80%;font-size: 30px;direction:RTL;color: transparent;text-shadow: 0 0 0 #2196f3;width:98%
+input[type="text"] {
+  height: 80%;
+  font-size: 30px;
+  direction: RTL;
+  color: transparent;
+  text-shadow: 0 0 0 #2196f3;
+  width: 98%;
 }
 .btn1 {
-    padding: 20px;font-size: 30px; grid-column: 1/2;grid-row:3/4;
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 1/2;
+  grid-row: 3/4;
 }
-.btn2{
-    padding: 20px;font-size: 30px; grid-column: 2/3;grid-row:3/4;'
+.btn2 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 2/3;
+  grid-row: 3/4;
 }
-.btn3{
-    padding: 20px;font-size: 30px;grid-column: 3/4;grid-row:3/4;
+.btn3 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 3/4;
+  grid-row: 3/4;
 }
-.btn4{
-    padding: 20px;font-size: 30px;grid-column: 1/2;grid-row:4/5;
+.btn4 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 1/2;
+  grid-row: 4/5;
 }
-.btn5{
-    padding: 20px;font-size: 30px;grid-column: 2/3;grid-row:4/5;
+.btn5 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 2/3;
+  grid-row: 4/5;
 }
-.btn6{
-    padding: 20px;font-size: 30px;grid-column: 3/4;grid-row:4/5;
-    
-}.btn7{
-    padding: 20px;font-size: 30px;grid-column: 1/2;grid-row:5/6;
+.btn6 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 3/4;
+  grid-row: 4/5;
 }
-.btn8{
-    padding: 20px;font-size: 30px;grid-column: 2/3;grid-row:5/6;
-    
+.btn7 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 1/2;
+  grid-row: 5/6;
 }
-.btn9{
-    padding: 20px;font-size: 30px; grid-column: 3/4;grid-row:5/6;
-    
+.btn8 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 2/3;
+  grid-row: 5/6;
 }
-.btn10{
-    padding: 20px;font-size: 30px;grid-column: 1/4;grid-row:6/7; 
+.btn9 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 3/4;
+  grid-row: 5/6;
 }
-.btn11{
-    padding: 20px;font-size: 30px;  grid-column:  4/5;grid-row:3/4;
+.btn10 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 1/4;
+  grid-row: 6/7;
 }
-.btn12{
-    padding: 20px;font-size: 30px; grid-column:  4/5;grid-row:4/5
+.btn11 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 4/5;
+  grid-row: 3/4;
 }
-.btn13{
-    padding: 20px;font-size: 30px;  grid-column: 4/5;grid-row:2/3;
+.btn12 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 4/5;
+  grid-row: 4/5;
 }
-.btn14{
-    padding: 20px;font-size: 30px; grid-column:  4/5;grid-row:5/6;
+.btn13 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 4/5;
+  grid-row: 2/3;
 }
-.btn15{
-    padding: 20px;font-size: 30px;  grid-column:  4/5;grid-row:6/7;
+.btn14 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 4/5;
+  grid-row: 5/6;
 }
-.btn16{
-    padding: 20px;font-size: 30px;grid-column: 1/4;grid-row:2/3;
+.btn15 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 4/5;
+  grid-row: 6/7;
+}
+.btn16 {
+  padding: 20px;
+  font-size: 30px;
+  grid-column: 1/4;
+  grid-row: 2/3;
 }
